Adding support links and adjusting a template runner for local testing
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ terms: "{{ callysto_html_terms }}"
 
 relative_permalinks: false
 
-exclude: [CNAME, README.md, LICENSE, ansible.sh]
+exclude: [CNAME, README.md, LICENSE, ansible.sh, mock_deploy]
