--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ terms: "{{ callysto_html_terms }}"
 
 relative_permalinks: false
 
-exclude: [CNAME, README.md, LICENSE, ansible.sh, mock_deploy]
+exclude: [CNAME, README.md, LICENSE, ansible.sh, mock_deploy.py]
